# Auxon-Inventory-Management-

./: Dockerfile  README.md  app.py  environment.py  index.html  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  scenarios.py
Downloads/Auxon-Inventory-Management/: environment.py  inference.py
server/: app.py
